0.13
* New Blhc plugin

0.12 "blind" (2014-05-30)
* Converted to Python 3
* New builddep command
* Support building for foreign architectures
* Per-packagedir lock files
* Chroot maintenance hooks
* Improved logging subsystem
* Improved Repository plugin
* systemd support
* Several bugfixes

0.11 "lazy" (2013-06-05)
* Piuparts module
* Log verbosity increased
* Several bugfixes

0.10 "antwerp" (2012-04-01)
* Massive code refactorization
* Documentation has been rewritten from scratch
* New configuration file format
* Local package repository support
* Support rebuilding packages available in other distributions
* Support for pbuilder/cowbuilder hooks
* Support for porter uploads
* Support for distribution mappings
* PEP-8 syntax

0.9 "bafana" (2011-02-06)
* Mailer support
* Package rebuild support
* Distribution blacklist support
* Module blacklist support
* Improved support for 3.0 package format
* Improved locking mechanism
* Several bugfixes

0.8 "daking" (2010-02-04)
* Cowbuilder support
* Commands files support
* More modules available
* Internazionalization
* Documentation converted to reStructuredText
* Several bugfixes

0.7 "Developer Domain" (2009-09-02)
* More modules available
* Compatibility with newer releases of related software
* Several bugfixes

0.6 "bobbo" (2009-01-27)
* Modules support
* Code reorganization
* Several bugfixes

0.5 "soyuzzo" (2008-06-26)
* Tarballs are dowloaded automatically by mirror
* GPG support for .changes file signatures
* Improved documentation
* Several bugfixes

0.4 "alcor" (2007-11-29)
* Modular design
* inotify support
* New locking management
* Packagequeue
* Several bugfixes

0.3 "embrace" (2007-07-28)
* Concurrent build processes
* New daemonization routine
* New documentation
* Several bugfixes

0.2.1 (2007-05-26)
* Lintian/Linda support
* Several bugfixes

0.2 "TOTU" (2007-05-13)
* Generic Debian-based distribution support
* .changes file support
* Simple priority mechanism to provide build order
