@@ -18,6 +18,7 @@ keyring: /etc/debomatic/debomatic.gpg
 [modules]
 modules: 1
 modulespath: /usr/share/debomatic/modules
+maxthreads: 5
 
 [runtime]
 alwaysupdate: unstable experimental utopic
@@ -54,4 +55,4 @@ pubring: /etc/debomatic/debomatic-sign.pubring.gpg
 secring: /etc/debomatic/debomatic-sign-pubring.gpg
 
 [internals]
-configversion: 012a
+configversion: 013a
