@@ -1,4 +1,5 @@
 0.13
+* Improved modules subsystem
 * New Blhc plugin
 
 0.12 "blind" (2014-05-30)
